@@ -7,7 +7,7 @@
 	<license>http://www.gnu.org/copyleft/gpl.html GNU/GPL</license>
 	<authorEmail>S.Moffatt@toowoomba.qld.gov.au</authorEmail>
 	<authorUrl>www.toowoomba.qld.gov.au</authorUrl>
-	<version>1.0.7</version>
+	<version>1.0.8</version>
 	<description>JAuthTools: Initiates Single Signon for users with LDAP</description>
 	<files>
 		<filename mambot="ldap.sso">ldap.sso.php</filename>
